<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bornfight.weatherappvujnovic.ui.activities.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />
    </com.google.android.material.appbar.MaterialToolbar>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_til"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginTop="@dimen/default_margin_top"
        android:layout_marginRight="@dimen/default_margin_side"

        app:startIconDrawable="@drawable/ic_black_search_24"
        app:startIconTint="@color/light_blue_700"
        app:endIconMode="clear_text"
        app:endIconTint="@color/light_blue_700"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_til_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textColor="@color/text_color" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/btn_margin_top"

        android:text="@string/main_submit_btn_text"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_til" />

    <ScrollView
        android:id="@+id/main_sv"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginTop="@dimen/default_margin_top"
        android:layout_marginRight="@dimen/default_margin_side"
        android:layout_marginBottom="@dimen/default_margin_bottom"

        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_submit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="@dimen/default_margin_side"
                android:layout_marginRight="@dimen/default_margin_side"

                android:text="@string/weather_description" />

            <TextView
                android:id="@+id/tv_weather_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="@dimen/default_margin_side"
                android:layout_marginRight="@dimen/default_margin_side"

                android:text="@string/placeholder_value"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="@dimen/default_margin_side"
                android:layout_marginTop="@dimen/text_margin_top"
                android:layout_marginRight="@dimen/default_margin_side"

                android:text="@string/current_temperature" />

            <TextView
                android:id="@+id/tv_curr_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="@dimen/default_margin_side"
                android:layout_marginRight="@dimen/default_margin_side"

                android:text="@string/placeholder_value"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/text_margin_top"

                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/min_temperature" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/max_temperature" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_min_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/placeholder_value"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_max_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/placeholder_value"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="@dimen/default_margin_side"
                android:layout_marginTop="@dimen/text_margin_top"
                android:layout_marginRight="@dimen/default_margin_side"

                android:text="@string/pressure_text" />

            <TextView
                android:id="@+id/tv_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/placeholder_value"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="@dimen/default_margin_side"
                android:layout_marginTop="@dimen/text_margin_top"
                android:layout_marginRight="@dimen/default_margin_side"

                android:text="@string/humidity_text" />

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/placeholder_value"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="@dimen/default_margin_side"
                android:layout_marginTop="@dimen/text_margin_top"
                android:layout_marginRight="@dimen/default_margin_side"

                android:text="@string/visibility_text" />

            <TextView
                android:id="@+id/tv_visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/placeholder_value"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="@dimen/default_margin_side"
                android:layout_marginTop="@dimen/text_margin_top"
                android:layout_marginRight="@dimen/default_margin_side"

                android:text="@string/wind_speed" />

            <TextView
                android:id="@+id/tv_wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/placeholder_value"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="@dimen/default_margin_side"
                android:layout_marginTop="@dimen/text_margin_top"
                android:layout_marginRight="@dimen/default_margin_side"

                android:text="@string/measure_location" />

            <TextView
                android:id="@+id/tv_measure_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/placeholder_value"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>